# pulumi-provider-boilerplate

./: .ci-mgmt.yaml  .devcontainer.json  .dockerignore  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .mise.toml  Makefile  README.md  go.mod  go.sum  mise.toml  schema.json
.config/: defaults.mk  mise.test.toml  mise.toml
.devcontainer/: postCreateCommand.sh
deployment-templates/: .goreleaser.yml  README-DEPLOYMENT.md  release.yml  upgrade-provider.yml
docker/: Dockerfile
examples/: base_test.go  dotnet_test.go  go_test.go  java_test.go  nodejs_test.go  python_test.go  yaml_test.go
provider/: go.mod  go.sum  provider.go  randomComponent.go  randomResource.go  randomResource_test.go  random_component.go  random_resource.go  random_resource_test.go
scripts/: get-versions.sh  mise.sh  (+1 more)
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/mynamespace_provider_boilerplate/: __init__.py  random.py  random_component.py
sdk/python/mynamespace_provider_boilerplate/config/: vars.py
sdk/python/mynamespace_xyz/: __init__.py  provider.py  random.py  random_component.py
sdk/python/mynamespace_xyz/config/: vars.py
sdk/python/pulumi_provider_boilerplate/: README.md  __init__.py  provider.py  random.py  random_component.py
sdk/python/pulumi_provider_boilerplate/config/: __init__.pyi  vars.py
sdk/python/pulumi_xyz/: __init__.py  provider.py  random.py  random_component.py  tables.py  utilities.py
sdk/python/pulumi_xyz/config/: __init__.pyi  vars.py
sdk/python/pulumi_xyz/providers/: __init__.py  provider.py
(+157 files in other folders)
